// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<DownloadCards /> renders with beta 1`] = `
<DocumentFragment>
  .c0 {
  text-align: center;
  min-height: 150px;
}

.c0 .ms-Spinner-label {
  font-size: 20px;
}

.c1 {
  font-size: 22px;
  margin-bottom: 2vh;
}

.c2 {
  background-color: rgba(255,255,255,0.75);
  border: #646464 solid 1px;
  border-radius: 1px;
  color: #646464;
  cursor: pointer;
  display: inline;
  font-size: 22px;
  padding: 8px 12px;
  margin: 4px 8px;
  -webkit-transition: all 300ms;
  transition: all 300ms;
  min-width: 12em;
}

.c2:hover {
  background-color: rgba(16,107,163,0.75);
  color: #fff;
}

.c4 {
  background-color: rgba(255,255,255,0.75);
  border: #646464 solid 1px;
  border-radius: 1px;
  color: #646464;
  cursor: pointer;
  display: inline;
  display: none;
  font-size: 22px;
  padding: 8px 12px;
  margin: 4px 8px;
  -webkit-transition: all 300ms;
  transition: all 300ms;
  min-width: 12em;
}

.c4:hover {
  background-color: rgba(16,107,163,0.75);
  color: #fff;
}

.c3 {
  font-size: 14px;
}

@media screen and (min-width:768px) {
  .c1 {
    font-size: 26px;
  }
}

@media screen and (min-width:768px) {
  .c4 {
    display: inline;
  }
}

<div
    class="c0"
  >
    <div
      class="c1"
    >
      Download for Linux (x64)
    </div>
    <a
      data-testid="download-stable-version"
      href="https://npm.taobao.org/mirrors/poi/v10.4.0/poi-10.4.0.7z"
    >
      <button
        class="c2"
      >
        <div>
          v10.4.0
        </div>
        <div
          class="c3"
        >
          Stable, for most users
        </div>
      </button>
    </a>
    <a
      href="https://npm.taobao.org/mirrors/poi/v10.5.0/poi-10.5.0.7z"
    >
      <button
        class="c4"
      >
        <div>
          v10.5.0
        </div>
        <div
          class="c3"
        >
          Beta, for new features
        </div>
      </button>
    </a>
  </div>
</DocumentFragment>
`;

exports[`<DownloadCards /> renders with invalid target 1`] = `
<DocumentFragment>
  .c0 {
  text-align: center;
  min-height: 150px;
}

.c0 .ms-Spinner-label {
  font-size: 20px;
}

.c1 {
  font-size: 22px;
  margin-bottom: 2vh;
}

.c2 {
  background-color: rgba(255,255,255,0.75);
  border: #646464 solid 1px;
  border-radius: 1px;
  color: #646464;
  cursor: pointer;
  display: inline;
  font-size: 22px;
  padding: 8px 12px;
  margin: 4px 8px;
  -webkit-transition: all 300ms;
  transition: all 300ms;
  min-width: 12em;
}

.c2:hover {
  background-color: rgba(16,107,163,0.75);
  color: #fff;
}

.c4 {
  background-color: rgba(255,255,255,0.75);
  border: #646464 solid 1px;
  border-radius: 1px;
  color: #646464;
  cursor: pointer;
  display: inline;
  display: none;
  font-size: 22px;
  padding: 8px 12px;
  margin: 4px 8px;
  -webkit-transition: all 300ms;
  transition: all 300ms;
  min-width: 12em;
}

.c4:hover {
  background-color: rgba(16,107,163,0.75);
  color: #fff;
}

.c3 {
  font-size: 14px;
}

@media screen and (min-width:768px) {
  .c1 {
    font-size: 26px;
  }
}

@media screen and (min-width:768px) {
  .c4 {
    display: inline;
  }
}

<div
    class="c0"
  >
    <div
      class="c1"
    >
      Download for chiba
    </div>
    <a
      data-testid="download-stable-version"
      href="https://github.com/poooi/poi/releases"
    >
      <button
        class="c2"
      >
        <div>
          v10.4.0
        </div>
        <div
          class="c3"
        >
          Stable, for most users
        </div>
      </button>
    </a>
    <a
      href="https://github.com/poooi/poi/releases"
    >
      <button
        class="c4"
      >
        <div>
          v10.5.0
        </div>
        <div
          class="c3"
        >
          Beta, for new features
        </div>
      </button>
    </a>
  </div>
</DocumentFragment>
`;

exports[`<DownloadCards /> renders without beta 1`] = `
<DocumentFragment>
  .c0 {
  text-align: center;
  min-height: 150px;
}

.c0 .ms-Spinner-label {
  font-size: 20px;
}

.c1 {
  font-size: 22px;
  margin-bottom: 2vh;
}

.c2 {
  background-color: rgba(255,255,255,0.75);
  border: #646464 solid 1px;
  border-radius: 1px;
  color: #646464;
  cursor: pointer;
  display: inline;
  font-size: 22px;
  padding: 8px 12px;
  margin: 4px 8px;
  -webkit-transition: all 300ms;
  transition: all 300ms;
  min-width: 12em;
}

.c2:hover {
  background-color: rgba(16,107,163,0.75);
  color: #fff;
}

.c3 {
  font-size: 14px;
}

@media screen and (min-width:768px) {
  .c1 {
    font-size: 26px;
  }
}

<div
    class="c0"
  >
    <div
      class="c1"
    >
      Download for Linux (x64)
    </div>
    <a
      data-testid="download-stable-version"
      href="https://npm.taobao.org/mirrors/poi/v10.4.0/poi-10.4.0.7z"
    >
      <button
        class="c2"
      >
        <div>
          v10.4.0
        </div>
        <div
          class="c3"
        >
          Stable, for most users
        </div>
      </button>
    </a>
  </div>
</DocumentFragment>
`;
